package edu.itc.enrollment_scheduling_system.model;

public enum EnrollmentStatus {
    PENDING,
    ENROLLED,
    REJECTED,
    WAITLISTED,
    PASSED,
    FAILED,
    DROPPED
}
