package edu.itc.enrollment_scheduling_system.model;

import jakarta.persistence.*;
import lombok.*;
import java.time.LocalTime;

@Entity
@Table(name = "schedules")
@Getter @Setter @NoArgsConstructor @AllArgsConstructor
public class Schedule {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    private String dayOfWeek; 
    private LocalTime startTime; 
    private LocalTime endTime;   

    @ManyToOne
    @JoinColumn(name = "classroom_id")
    private Classroom classroom;
}